--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
     "@types/body-parser": "^1.19.2",
+    "bootstrap": "^5.1.3",
     "jquery": "^3.6.3",
     "moment": "^2.29.4",
+    "ngx-bootstrap": "^8.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
