--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jquery": "^3.6.3",
     "moment": "^2.29.4",
     "ngx-bootstrap": "^8.0.0",
+    "ngx-order-pipe": "^2.2.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
